--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -1,6 +1,9 @@
 <div class="jumbotron">
     <h1 class="text-center">Alurapic</h1>
 </div>
+<p ng-show="mensagem.length" class="alert alert-info">
+    {{mensagem}}
+</p>
 <div class="row">
     <div class="col-md-12">
         <form>
@@ -16,10 +19,13 @@
     </div>
 </div>
 <div class="row">
-    <!-- Diretiva equivalente ao ng-for -->
+    <!-- ng-repeat -> diretiva equivalente ao ng-for -->
     <!-- Usando o pipe eu consigo dizer que ele deve usar um filter e passar em qual valor esse
         filtro será baseado -->
     <meu-painel class="col-md-2 painel-animado" ng-repeat="foto in fotos | filter: filtro" titulo="{{foto.titulo}}">
         <minha-foto url="{{foto.url}}" titulo="{{foto.titulo}}"></minha-foto>
+        <a href="fotos/edit/{{foto._id}}" class="btn btn-primary btn-block">Editar</a>
+        <!-- <button ng-click="remover(foto)" class="btn btn-danger btn-block">Remover</button> -->
+        <meu-botao-perigo acao="remover(foto)" nome="Remover"></meu-botao-perigo>
     </meu-painel>
 </div>
