--- a/public/partials/foto.html
+++ b/public/partials/foto.html
@@ -62,7 +62,10 @@
         <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
             Salvar
         </button>
-        <a href="/" class="btn btn-primary">Voltar</a>
+        <!-- Versão usando watcher -->
+        <!-- <a href="/" class="btn btn-primary" meu-focus focado="focado">Voltar</a> -->
+        <!-- Versão com broadcast - funciona sem o focado -->
+        <a href="/" class="btn btn-primary" meu-focus>Voltar</a>
         <hr>
     </div>
     <div class="col-md-6">
